--- a/src/pages/market/market.module.css
+++ b/src/pages/market/market.module.css
@@ -8,13 +8,10 @@
 
 /* 헤더 영역 */
 .header_area {
-  position: sticky;
+  /* position: sticky; */
   top: 0;
   z-index: 10;
-  border-bottom: 1px solid #e5e5e5;
   padding: 1rem 0;
-  backdrop-filter: blur(10px);
-  background-color: rgba(253, 251, 246, 0.95);
 }
 
 .container {
