Add admin pages and update components

--- a/src/layout/layout.module.css
+++ b/src/layout/layout.module.css
@@ -106,6 +106,14 @@
   height: auto;
 }
 
+.brand_text {
+  margin-left: 0.5rem;
+  font-size: 0.875rem;
+  font-weight: 600;
+  color: #6e9556;
+  white-space: nowrap;
+}
+
 /* 검색 영역 - 중앙 확장 (더 넓게) */
 .srch_utils_area {
   display: flex;
